--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,11 +94,13 @@ dependencies {
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
 
     //Floating Nav View
-    //compile 'com.github.andremion:floatingnavigationview:1.0.1'
     compile(name: 'FloatingNavView', ext: 'aar')
 
     //Leakcanary
     compile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+
+    //About page
+    compile 'com.github.medyo:android-about-page:1.2.1'
 
     testCompile 'junit:junit:4.12'
 }
