--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,15 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".presentation.activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name=".presentation.activity.BookDetailActivity"
@@ -35,8 +31,17 @@
             android:name=".presentation.activity.SearchActivity"
             android:parentActivityName=".presentation.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".presentation.activity.AboutActivity"
-            android:parentActivityName=".presentation.activity.MainActivity"/>
+        <activity
+            android:name=".presentation.activity.AboutActivity"
+            android:parentActivityName=".presentation.activity.MainActivity" />
+        <activity android:name=".presentation.activity.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
