--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
     ext {
         supportVersion = "25.3.1"
